<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Movecares</string>
    <string name="app_net_error">网络错误</string>
    <string name="app_net_long_error">网络超时</string>
    <string name="app_service_error">服务器错误</string>
    <string name="image_string">images</string>
    <string name="app_data_null_data">未找到相关记录</string>

    <!-- 主页界面 -->
    <string name="activity_main_home">首页</string>
    <string name="activity_main_collect">收藏</string>
    <string name="activity_main_find">发现</string>
    <string name="activity_main_me">我</string>
    <string name="main_exit_remind">再按一次退出</string>
    <string name="welcome_ago">欢迎&#160;:&#160;</string>
    <string name="welcome_after"></string>

    <!-- 菜单界面 -->
    <string name="menu_title">更多</string>
    <string name="menu_publish_question">提交问题</string>

    <!-- 对话框 -->
    <string name="dialog_sure">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_loading">加载中&#8230;</string>
    <string name="dialog_exit_title">"提示"</string>
    <string name="dialog_exit_msg">"是否放弃编辑，确认退出？"</string>
    <string name="dialog_again_exit_msg">"当前问题已提交成功，确认则再次提交！"</string>
    <string name="dialog_delete_item_exit_msg">"是否删除此问题，确认删除？"</string>
    <string name="dialog_exit_yes">"退出"</string>
    <string name="dialog_delete_item_exit_yes">"删除"</string>
    <string name="dialog_again_exit_yes">"确认"</string>

    <!-- DynameListView -->
    <string name="Refresh_normal">下拉刷新</string>
    <string name="Refresh_normal_up">上拉刷新</string>
    <string name="Refresh_willrefresh">松开刷新</string>
    <string name="Refresh_refreshing">正在刷新&#8230;</string>
    <string name="Refresh_refreshing_up">正在加载&#8230;</string>
    <string name="Refresh_stop_refresh">停止刷新</string>

    <!-- 登录页面 -->
    <string name="login_username">账户</string>
    <string name="login_pwd">密码</string>
    <string name="login_username_dialog">请输入您的用户名</string>
    <string name="login_pwd_dialog">请输入您的密码</string>
    <string name="login_pwd_remember">记住密码</string>
    <string name="activity_login_title">登录</string>
    <string name="login_success">登录成功</string>

    <!-- 首页界面 -->
    <string name="fragment_home_question_title">我的问题</string>
    <string name="fragment_home_process_task_title">我的流程任务</string>
    <string name="fragment_home_wbs_task_title">我的WBS任务</string>
    <string name="fragment_home_more_title">更多精彩 &#8230;</string>

    <!-- 流程任务 -->
    <string name="inbox_task_title">流程任务</string>
    <string name="inbox_task_detail_title">流程任务详细</string>
    <string name="inbox_task_name">名称</string>
    <string name="inbox_task_titles">任务说明</string>
    <string name="inbox_task_route_action">操作类型</string>
    <string name="inbox_task_">内容</string>
    <string name="inbox_task_state">状态</string>
    <string name="inbox_task_version">版本</string>
    <string name="inbox_task_originator">创建者</string>
    <string name="inbox_task_scheduled_completion_date">发起日期</string>

    <!-- WBS任务 -->
    <string name="task_title">WBS任务</string>
    <string name="task_detail_title">WBS任务详细</string>
    <string name="task_name">名称</string>
    <string name="task_state">状态</string>
    <string name="task_describe">描述</string>
    <string name="task_type">类型</string>
    <string name="task_estimate_start_date">估计开始时间</string>
    <string name="task_estimate_finish_date">估计完成时间</string>
    <string name="task_start_date">实际结束日期</string>
    <string name="task_finish_date">实际结束日期</string>
    <string name="task_version">版本</string>
    <string name="task_originator">创建者</string>
    <string name="task_owner">所有者</string>

    <!-- 我的问题 -->
    <string name="issue_title">问题</string>
    <string name="issue_detail_title">问题详细</string>
    <string name="issue_name">名称</string>
    <string name="issue_describe">描述</string>
    <string name="issue_state">状态</string>
    <string name="issue_priority">Priority</string>
    <string name="issue_tag">Tag</string>
    <string name="issue_resolution">Resolution</string>
    <string name="issue_related_project">相关项目</string>
    <string name="issue_requirements_start_date">要求开始日期</string>
    <string name="issue_requirements_date">要求完成日期</string>
    <string name="issue_start_date">实际开始日期</string>
    <string name="issue_finish_date">实际结束日期</string>
    <string name="issue_user">所有者</string>
    <string name="issue_assignee">受托人</string>
    <string name="issue_owner">所有我拥有的问题</string>
    <string name="issue_ownerAndActive">我拥有的活动问题</string>
    <string name="issue_ownerAndCreate">我拥有的创建问题</string>
    <string name="issue_ownerAndReview">需要我审核的问题</string>
    <string name="issue_ownerAndAssignToMe">指派给我的活动问题</string>
    <string name="issue_ownerAndAllAssigned">所有指派的问题</string>
    <string name="issue_ownerAndWatchActive">关注中的问题</string>
    <string name="issue_delete_success">删除成功</string>
    <string name="issue_detail_editor">编辑</string>
    <string name="issue_detail_handle">处理</string>
    <string name="issue_detail_success">完成</string>

    <!-- 提交问题 -->
    <string name="publish_issue_title">提交问题 </string>
    <string name="publish_issue_type">类型 :</string>
    <string name="publish_issue_describe">描述 :</string>
    <string name="publish_issue_tag">Tag :</string>
    <string name="publish_issue_related_project">Related Project :</string>
    <string name="publish_issue_start_date">开始日期 :</string>
    <string name="publish_issue_requirements_start_date">要求开始日期 :</string>
    <string name="publish_issue_requirements_date">要求完成日期 :</string>
    <string name="publish_issue_date_title">解决日期</string>
    <string name="publish_issue_start_date_title">要求开始日期</string>
    <string name="publish_issue_requirements_date_title">要求完成日期</string>
    <string name="publish_issue_hs_priority">优先级 :</string>
    <string name="publish_issue_user">受托人 :</string>
    <string name="publish_issue_watchers">Watchers :</string>
    <string name="publish_issue_attach_file">Attach File?</string>
    <string name="publish_issue_tissue">报告组织 :</string>
    <string name="publish_issue_submit">提交 </string>
    <string name="publish_issue_submit_success">发布成功 </string>
    <string name="publish_issue_check_describe"> 请输入描述信息!</string>
    <string name="publish_issue_check_related_project"> 请输入Related Project 信息!</string>
    <string name="publish_issue_check_requirements_start_date">请选择要求开始时间 !</string>
    <string name="publish_issue_check_requirements_date">请选择要求完成时间 !</string>
    <string name="publish_issue_check_user"> 请输入受托人信息!</string>
    <string name="publish_issue_check_tissue"> 请输入报告组织信息!</string>
    <string name="complie_edit">编辑资料〉</string>

    <!-- 我页面 -->
    <string name="me_title">我</string>
    <string name="user_info">个人信息</string>
    <string name="user_login_out">退出登录</string>

    <!-- 个人信息 -->
    <string name="user_info_title">个人信息</string>
    <string name="user_info_username">用&#160;&#160;户&#160;&#160;名</string>
    <string name="user_info_name">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名</string>
    <string name="user_info_email">邮&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;箱</string>

    <!-- 编辑问题 -->
    <string name="issue_edit_title">编辑问题</string>

    <!-- et类型对应数组表 -->
    <string name="issue_edit_et_0">描&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;述 :</string>
    <string name="issue_edit_et_1">所&#160;&#160;有&#160;&#160;者 :</string>
    <string name="issue_edit_et_2">Assignee :</string>
    <string name="issue_edit_et_3">Tag :</string>
    <string name="issue_edit_et_4">watchers :</string>
    <string name="issue_edit_et_5">解决方案 :</string>

    <!-- sp类型对应数组表 -->
    <string name="issue_edit_sp_0">Priority :</string>

    <!-- next类型对应数组表 -->
    <string name="issue_edit_next_0">解决日期 :</string>
    <string name="issue_edit_next_1">要求完成日期 :</string>

    <!-- tv类型对应数组表 -->
    <string name="issue_edit_tv_0">名&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;称 :</string>
    <string name="issue_edit_tv_1">状&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;态 :</string>
    <string name="issue_edit_tv_2">类&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;型 :</string>
    <string name="issue_edit_tv_3">末次状态修改时间 :</string>
    <string name="issue_edit_tv_4">创&#160;&#160;建&#160;&#160;者 :</string>
    <string name="issue_edit_tv_5">创建日期 :</string>
    <string name="issue_edit_tv_6">最近修改时间 :</string>
    <string name="issue_edit_tv_7">实际开始日期 :</string>
    <string name="issue_edit_tv_8">实际结束日期 :</string>
    <string name="issue_edit_submit">编&#160;&#160;&#160;&#160;辑</string>
    <string name="issue_edit_submit_success">编辑成功</string>
    <string name="issue_edit_submit_error0">请输入描述信息</string>
    <string name="issue_edit_submit_error1">请输入所有者信息</string>
    <string name="issue_edit_submit_error2">请输入Assignee信息</string>
    <!-- 处理问题 -->
    <string name="issue_review_title">处理问题</string>
    <string name="issue_review_tv0">Name  :</string>
    <string name="issue_review_tv1">Desc :&#160;&#160;</string>
    <string name="issue_review_et0">解决方案</string>
    <string name="issue_review_sp0">Demote/Promote?</string>
    <string name="issue_review_submit_error0">&#160;&#160;&#160;&#160;请输入解决方案!&#160;&#160;&#160;&#160;</string>
    <string name="issue_review_submit">处&#160;&#160;&#160;&#160;理</string>
    <string name="issue_review_submit_sucess">处理成功</string>
    
    <!-- 文件 -->
	<string name="file_select">选择文件</string>
	<string name="file_select_take_photo">拍照</string>
	<string name="file_select_other">其他</string>
	<string name="file_select_dialog">请选择文件!</string>
	<string name="file_select_dialog_error">请安装文件管理器!</string>
	<string name="file_select_error">没有打开此文件的应用程序,请安装！</string>
	<string name="file_select_length_max">文件过大,请提交不超过2M的文件!</string>
	
	<string name="finish_tast_success">任务完成成功!</string>
	
	<string name="file_name">文件</string>
	<string name="file_name_null">无相关文件</string>
	
</resources>